// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty 1`] = `
<DocumentFragment>
  <span
    class=""
  />
</DocumentFragment>
`;

exports[`icon variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v5-c-toggle-group__icon"
  >
    ICON
  </span>
</DocumentFragment>
`;

exports[`text variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v5-c-toggle-group__text"
  >
    Test
  </span>
</DocumentFragment>
`;
